--- a/style.css
+++ b/style.css
@@ -1,14 +1,42 @@
 body{
-    background-color: rgb(83, 81, 81);
-    font-family: "arquitecta", standard-bold;
+    background-color: rgb(53, 53, 53);
+    font-family: "Nunito", sans-serif;
     font-weight: 1000;
     font-style: normal;
+    background: #B4B7B8;
+    background: linear-gradient(135deg, #EEEEEE, #CBCBCB);
+}
+.titletext{
+  font-family: "Michroma", sans-serif;
+  font-weight: 1000;
+  font-style: normal;
+  color: rgb(255, 31, 31);
 }
 
+.titletextbox{
+  margin: auto;
+  padding: auto;
+  background: transparent;
+ 
+}
+.subtitlebox,.best1{
+  margin-top:2em ;
+}
+.glowblack{
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
+}
+.kline{
+  height: 5px;
+  width: 100%;
+  background-color: #000000;
+  background: #000000;
+  background: radial-gradient(at center, #00000077, #e4e4e4);
 
+}
 .best{
-    color: rgb(241, 234, 234);
-    padding: 5px;
+    color: rgb(65, 65, 65);
+    padding: 3px;
+   
         
       }
 .best h1{
@@ -46,7 +74,7 @@ body{
     color: #fff;
     border-radius: 5px;
     padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
     font-weight: 500;
     background: transparent;
     cursor: pointer;
@@ -61,21 +89,47 @@ body{
   
  
   /* 5 */
-  .btn-5 {
-    width: 130px;
+  .glow {
+    box-shadow: 0 0 20px #D80302;
+}
+.slide{
+  padding: 0 !important;
+}
+.text-info{
+    color: #D80302 !important;
+    text-shadow: 2px 3px 3px rgba(0, 0, 0, 0.4);
+}
+.btn-info {
+    /* font-size: 16px; */
     height: 40px;
-    line-height: 42px;
-    padding: 0;
-    border: none;
-    background: rgb(237, 238, 235);
-  background: linear-gradient(0deg, rgba(255,27,0,1) 0%, rgba(251,75,2,1) 100%);
-  }
-  .btn-5:hover {
-    color: #f0094a;
-    background: transparent;
-     box-shadow:none;
-  }
-  .btn-5:before,
+    width: 150px;
+    background-color: #D80302;
+    border-color: #D80302;
+    color: #ffffff !important;
+    border: 1px solid #D80302 !important;
+    text-shadow: 2px 3px 3px rgba(255, 17, 17, 0.4);
+    box-shadow: 0px 10px 10px -6px rgba(255, 0, 0, 0.651);    border: none !important;
+}
+.btn:active{
+    background-color: transparent !important;
+    border-color: #D80302;
+    color: #D80302 !important;
+    border: 1px solid #D80302 !important;
+    
+    
+}
+.shadow{
+   box-shadow: 0px 10px 10px -6px rgba(255, 0, 0, 0.651);    border: none !important;
+}
+.btn-info:hover {
+    background-color: #D80302;
+    transform: scale(1.1);
+    color: #ffffff !important;
+    box-shadow:none !important;
+    
+}
+
+  /* .btn-5:before,
   .btn-5:after{
     content:'';
     position:absolute;
@@ -104,7 +158,7 @@ body{
   .btn-5 a{
     text-decoration: none;
     color: #fff;
-  }
+  } */
   
   
  
@@ -116,9 +170,7 @@ body{
         
 }
 
-.toparea{
-    background-color: brown;
-}
+
 .toparea ul li{
    float: left; 
    list-style: none;
@@ -139,6 +191,7 @@ body{
 .titlearea{
     background-color: black;
     color: white;
+    padding-top: 5px;
 }
 .titlearea a{
     text-decoration: none;
@@ -182,9 +235,9 @@ body{
     margin-left: 30px;
 }
 .sec{
-    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('');
     padding: 10px 0;
-    background-color: grey;
+    background: black !important;
+    
 }
 hr {
   display: block;
@@ -215,11 +268,12 @@ hr {
 
 }
 .about{
-    color: #fff;
+    color: #000000;
 }
 .about h1{
    margin-top: 60px;
-   color: yellow;
+   color: rgb(255, 0, 0);
+   text-shadow: 0px 2px 2px rgba(188, 20, 20, 0.799);
 }
 .about h3{
     margin-top: 40px;
@@ -228,12 +282,23 @@ hr {
     margin-top: 40px;  
 }
 .about img{
-    padding: 70px;
-    filter: drop-shadow(46px 30px 1px #000000);
-    width: 100%;
+    padding: 10px;
+    filter: drop-shadow(46px 30px 1px #ffffffdf);
+    width: 90%;
+    border: solid 2px red;
+    border-radius: 30px;
+    margin: 5em;
+
     
 }
-  
+.about i{
+  color: #ff0000;
+  background: #fff;
+  border-radius: 50%;
+  text-shadow: 0px 3px 3px rgba(255, 0, 0, 0.6);
+}
+
+
   .container1 {
     max-width:400px;
     width:100%;
@@ -250,11 +315,15 @@ hr {
   }
   
   #contact h3 {
-    color: yellow;
+    color: rgb(160, 160, 160);
     display: block;
     font-size: 30px;
     font-weight: 400;
-    font-family: 'allura', cursive;
+    /* font-family: 'allura', cursive; */
+  }
+  .headertext{
+    columns: white;
+
   }
   
   #contact h4 {
@@ -262,7 +331,7 @@ hr {
     display:block;
     font-size:18px;
     color: #FFF;
-    font-family: 'Dancing Script', cursive;
+    /* font-family: 'Dancing Script', cursive; */
     
   }
  
@@ -281,6 +350,12 @@ hr {
     background-color: grey;
 }
   
+.videotitle{
+  width: 100%;
+  color: red;
+  margin: auto;
+  padding: auto;
+}
   #contact button[type="submit"] {
     cursor:pointer;
     width:100%;
@@ -309,7 +384,7 @@ hr {
 }
 .foot h3{
     border-left: 10px  white;
-    color: yellow;
+    color: rgb(177, 177, 176);
 }
 .foot i {
     color: #fff;
@@ -343,16 +418,17 @@ video{
   background-color: rgb(255, 252, 252);
 }
 .quote h1{
-  color: yellow;
+  color: rgb(255, 0, 0);
   font-size: 55px;
-  font-family: 'Dancing Script', cursive;
+  /* font-family: 'Dancing Script', cursive; */
   margin-top: 160px;
   margin-bottom: 80px;
+  text-shadow: 0px 2px 2px rgba(255, 0, 0, 0.6);
 }
 /* styles.css */
 body, html {
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  /* font-family: 'Arial', sans-serif; */
   overflow-x: hidden;
 }
 
@@ -405,7 +481,7 @@ body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
 }
 
  
