--- a/style.css
+++ b/style.css
@@ -17,10 +17,21 @@ body{
   margin: auto;
   padding: auto;
   background: transparent;
- 
 }
 .subtitlebox,.best1{
   margin-top:2em ;
+}
+.subtitlebox h1{
+  font-size: 50px;
+}
+.subtitlebox h1 span{
+  color: #FF4949;
+  font-size: 60px; 
+  text-shadow: 0px 2px 2px rgba(255, 0, 0, 0.6);
+}
+.qualityMattwe{
+  font-size:45px;
+  font-family: 'Croissant One', serif;
 }
 .glowblack{
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
@@ -31,7 +42,9 @@ body{
   background-color: #000000;
   background: #000000;
   background: radial-gradient(at center, #00000077, #e4e4e4);
-
+}
+.mobilebest1{
+  display: none;
 }
 .best{
     color: rgb(65, 65, 65);
@@ -283,7 +296,7 @@ hr {
 }
 .about img{
     padding: 10px;
-    filter: drop-shadow(46px 30px 1px #ff0000df);
+    filter: drop-shadow(46px 30px 1px #ffffffdf);
     width: 90%;
     border: solid 2px red;
     border-radius: 30px;
@@ -626,6 +639,69 @@ body, html {
     background: #223;
 }
 
+@media (max-width: 600px) {
+  /* Your mobile styles go here */
+  body {
+    font-size: 14px;
+    padding: 10px !important;
+  }
+  .subtitlebox h1 {
+    font-size: 30px;
+  }
+  .subtitlebox h1 span{
+    font-size: 40px;
+  }
+  .qualityMattwe{
+  font-size:18px;
+  
+  }
+  .subtitlebox h3{
+    font-size: 14px;
+    text-align: justify;
+  }
+  .mobilebest1{
+    display: block;
+    padding: auto;
+  }
+   .mobilebest1 img {
+    width: 100%;
+  }
+  .best1,.best2,.best3{
+    display: none;
+    margin: auto;
+  }
+  .titlearea {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+
+
+  .container {
+    flex-direction: column;
+    padding: 15px;
+  }
+
+  .header {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .project-card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  /* Hide some elements if needed */
+  .desktop-only {
+    display: none;
+  }
+}
 
 
 
