about page ui enhance
vinay ui is apply on the about page but mobile view is pending

--- a/about.css
+++ b/about.css
@@ -1,31 +1,12 @@
-body{
-    background-color: rgb(83, 81, 81);
-    font-family: "arquitecta", standard-bold;
-    font-weight: 1000;
-    font-style: normal;
-    
-}
 
-.toparea{
-    background-color: brown;
-}
-.about{
-    color: #fff;
-}
-.about h1{
-   margin-top: 60px;
-   color: yellow;
-}
-.about h3{
-    margin-top: 40px;
-}
-.about h4{
-    margin-top: 40px;  
-}
+
+
+
 .about img{
-    padding: 70px;
-    filter: drop-shadow(46px 30px 1px #000000);
-    width: 100%;
+    margin-top: 30px;
+    padding: 20px;
+    filter: drop-shadow(46px 30px 1px #ffffff);
+    width: 80%;
     transition: transform 2s ease;
     
 }
@@ -35,23 +16,32 @@ body{
 
 }
 .about1{
-    color: #fff;
+    color: #000000;
 }
 .about1 h1{
    margin-top: 60px;
-   color: yellow;
+   color:  rgb(255, 0, 0);
 }
 .about1 h3{
-    margin-top: 40px;
+    padding-top: 40px;
+}
+.about1 h3:nth-child(1){
+    padding-top: 150px;
+}
+.lasth1{
+    padding-top: 150px;
 }
 .about1 h4{
     margin-top: 40px;
-    color: yellow;  
+    color:  rgb(255, 0, 0);  
 }
 .about1 img{
     padding: 70px;
-    filter: drop-shadow(-46px -30px 1px #000000);
-    width: 100%;
+    filter: drop-shadow(-46px -30px 1px #ffffff);
+    width: 80%;
+     border: solid 2px red;
+    border-radius: 30px;
+    margin: 5em;
     transition: transform 2s ease;
 }
 .about1 img:hover{
@@ -59,34 +49,7 @@ body{
     overflow: hidden;
 
 }
-.foot{
-    background:black;
-    padding: 30px 30px;
-}
-.foot h3{
-    border-left: 10px  white;
-    color: yellow;
-}
 
-.foot i {
-    color: #fff;
-    margin: 5px 10px;
-}
-.foot p{
-    color:#faf8f5;
-}
-.foot h5{
-    color:#f6f3f2;
-    
-}
-.foot a{
-    text-decoration: none;
-    color: #fff;
-}
-
-.foot ul li:hover{
-    transform: translate(5px 10px);
-}
 
 
 
