--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+  margin: 0;
+  padding: 0;
     background-color: rgb(53, 53, 53);
     font-family: "Nunito", sans-serif;
     font-weight: 1000;
@@ -6,6 +8,7 @@ body{
     background: #B4B7B8;
     background: linear-gradient(135deg, #EEEEEE, #CBCBCB);
 }
+
 .titletext{
   font-family: "Michroma", sans-serif;
   font-weight: 1000;
@@ -45,6 +48,8 @@ body{
 }
 .mobilebest1{
   display: none;
+
+  filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.5));
 }
 .best{
     color: rgb(65, 65, 65);
@@ -65,8 +70,6 @@ body{
 
 .best img{
     border-radius: 40px;
-    padding: px;
-    
     
 }
 .good{
@@ -121,7 +124,8 @@ body{
     color: #ffffff !important;
     border: 1px solid #D80302 !important;
     text-shadow: 2px 3px 3px rgba(255, 17, 17, 0.4);
-    box-shadow: 0px 10px 10px -6px rgba(255, 0, 0, 0.651);    border: none !important;
+    box-shadow: 0px 10px 10px -6px rgba(255, 0, 0, 0.651);   
+     border: none !important;
 }
 .btn:active{
     background-color: transparent !important;
@@ -132,7 +136,10 @@ body{
     
 }
 .shadow{
-   box-shadow: 0px 10px 10px -6px rgba(255, 0, 0, 0.651);    border: none !important;
+   box-shadow: 0px 10px 10px -6px rgba(255, 0, 0, 0.651);  
+  border: none !important;
+  filter: drop-shadow(0 6px 5px rgba(0, 0, 0, 0.5));
+
 }
 .btn-info:hover {
     background-color: #D80302;
@@ -290,7 +297,11 @@ hr {
 }
 .about h3{
     margin-top: 40px;
+    
 }
+.mobilemine2{
+      display: none;
+    }
 .about h4{
     margin-top: 40px;  
 }
@@ -645,22 +656,46 @@ body, html {
     font-size: 14px;
     padding: 10px !important;
   }
-  .subtitlebox h1 {
+  h3{
+    font-size: 16px;
+  }
+  .navbar-toggler{
+    margin-right: 0px !important;
+    margin-top: 5px;
+    
+  }
+  .navbar{
+    padding-right: 0px !important;
+    
+  }
+  .container-fluid{
+     padding-right: 0px !important;
+  }
+
+  .subtitlebox h1:nth-child(1) {
+    font-size: 40px;
+    text-align: center;
+  }
+  .subtitlebox h1:nth-child(2) {
     font-size: 30px;
+    text-align: center;
   }
   .subtitlebox h1 span{
     font-size: 40px;
   }
   .qualityMattwe{
   font-size:18px;
+  text-align: center;
+
   
   }
   .subtitlebox h3{
-    font-size: 14px;
+    font-size: 16px;
     text-align: justify;
   }
   .mobilebest1{
     display: block;
+    filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.5));
     padding: auto;
   }
    .mobilebest1 img {
@@ -675,6 +710,37 @@ body, html {
     justify-content: center;
     text-align: center;
   }
+  
+  .frame  {
+    padding-left:  75px ;
+    }
+
+.about h3{
+  text-align: justify;
+}
+.about h4{
+  text-align: center;
+}
+.about button{
+  margin-left: 100px;
+}
+
+    .computermine2{
+      display: none;
+      
+    }
+    .mobilemine2{
+      display: block;
+      padding: 20px;
+    }
+    .mobilemine2 img{
+      margin:auto;
+      padding: auto;
+    }
+.about h1{
+  text-align: center;
+    }
+
 
 
   .container {
