index.html about.html service.htmt team.html style.css

--- a/style.css
+++ b/style.css
@@ -608,7 +608,7 @@ body, html {
 
 .container1 form .input-box input:valid~span,
 .container1 form .input-box input:focus~span {
-    color : yellow ;
+    color : rgb(255, 0, 0) ;
     transform: translateY(-30px);
     z-index: 9;
 }
