--- a/style.css
+++ b/style.css
@@ -307,16 +307,8 @@ hr {
 }
 .about img{
     padding: 10px;
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
     filter: drop-shadow(46px 30px 1px #ffffffdf);
-=======
-    filter: drop-shadow(30px 30px 1px white);
->>>>>>> Stashed changes
-=======
-    filter: drop-shadow(30px 30px 1px white);
->>>>>>> Stashed changes
-    width: 90%;
+    width: 85%;
     border: solid 2px red;
     border-radius: 30px;
     margin: 5em;
@@ -616,7 +608,7 @@ body, html {
 
 .container1 form .input-box input:valid~span,
 .container1 form .input-box input:focus~span {
-    color : rgb(255, 0, 0) ;
+    color : yellow ;
     transform: translateY(-30px);
     z-index: 9;
 }
