--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@
     margin-top: 30px;
     padding: 20px;
     filter: drop-shadow(46px 30px 1px #ffffff);
-    width: 80%;
+    width: 85%;
     transition: transform 2s ease;
     
 }
@@ -38,7 +38,7 @@
 .about1 img{
     padding: 10px;
     filter: drop-shadow(-46px -30px 1px #ffffff);
-    width: 80%;
+    width: 85%;
      border: solid 2px red;
     border-radius: 30px;
     margin: 5em;
@@ -51,14 +51,38 @@
 }
 
 @media (max-width: 600px) {
-  /* Your mobile styles go here */
-  body {
-    font-size: 14px;
-    padding: 10px !important;
-  }
-  h3{
-    font-size: 16px;
-  }
+ .about img {
+    margin: 10px;
+    margin-top: 50px;
+    
+ }
+
+ .about1 img {
+    margin: 50px;
+ }
+ .lasth1{
+    padding-top: 0px;
+}
+.about h1{
+   margin-top: 0px;
+   
+}
+.about1 h1{
+   margin-top: 0px;
+   color:  rgb(255, 0, 0);
+}
+.about1 h3{
+    padding-top: 0px;
+}
+.about1 h3:nth-child(1){
+    padding-top: 0px;
+}
+
+.about1 h4{
+    margin-top: 40px;
+    color:  rgb(255, 0, 0);  
+}
+
 }
 
 
