--- a/team.css
+++ b/team.css
@@ -1,19 +1,4 @@
-body{
-    background-color: rgb(83, 81, 81);
-    font-family: "arquitecta", standard-bold;
-    font-weight: 1000;
-    font-style: normal;
-}
-.toparea{
-    background-color: brown;
-}
-.toparea ul li{
-   float: left; 
-   list-style: none;
-   color: white;
-   padding: 10px;
-   
-}
+
 .toparea img{
     width: 100%;
 }
@@ -21,8 +6,9 @@ body{
     color: white;
 }
 .team h1 {
-    
-    color: yellow;
+    text-align: center;
+    color: rgb(255, 0, 0);
+    text-shadow: 0px 2px 2px rgba(188, 20, 20, 0.799);
 }
 .team h3{
     padding-top: 8px;
@@ -121,7 +107,7 @@ hr {
 }
 .foot h3{
     border-left: 10px  white;
-    color: yellow;
+    color: rgb(255, 0, 0);
 }
 .foot p{
     color:#faf8f5;
