--- a/team.css
+++ b/team.css
@@ -2,6 +2,11 @@
 .toparea img{
     width: 100%;
 }
+.team {
+    background-color: transparent !important;
+    color:black;
+    margin-top: 20px;
+}
 .toparea ul li i{
     color: white;
 }
@@ -44,13 +49,7 @@
     margin-top: 15px;
     margin-left: 30px;
 }
-.sec{
-    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('');
-    padding: 10px 0;
-    
-    
-    
-}
+
 .teamMember i{
     color: #fff;
     font-size: 40px;
@@ -61,13 +60,7 @@
 .teamMember {
     text-align: center;
 }
-.sen{
-    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('');
-    padding: 10px 0;
-    
-    background-color: grey;
-    
-}
+
 hr {
     display: block;
     margin-top: 0.5em;
@@ -128,4 +121,7 @@ hr {
     margin: 5px 10px;
 }
 
-
+.sen{
+    background-color: #E3E3E3!important;
+    color: black;
+}
