--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ video{
 
 }
 .quote{
-  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('c8.jpg');
+  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('GallaryImage/c8.jpg');
   padding: 10px 0;
   background-color: rgb(255, 252, 252);
 }
@@ -778,6 +778,15 @@ body, html {
     display: none;
   }
 }
+footer a:hover{
+ color: #fa1111;
+ text-shadow: 0px 2px 2px rgba(255, 0, 0, 0.6);
+}
+footer i:hover{
+ color: #fa1111;
+ text-shadow: 0px 2px 2px rgba(255, 0, 0, 0.6);
+}
+
 
 
 
